updated to WildFly-9.0.1.Final and fixed Arquillian tests